--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,5 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 # jwt
-api.jwt.secret=""
+api.jwt.secret="11aa20"
 api.jwt.expiration=7200000
