--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,29 @@
 server.port=2110
 
 # datasource
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:danielaraujos-hinario
-spring.datasource.username=sa
-spring.datasource.password=
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem:danielaraujos-hinario
+#spring.datasource.username=sa
+#spring.datasource.password=
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.hibernate.ddl-auto=create-drop
 #h2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/banco
+spring.datasource.username=usuario
+spring.datasource.password=senha
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.testWhileIdle=true
+spring.datasource.validationQuery=SELECT 1
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
 
 # jwt
 api.jwt.secret="11aa20"
